added lots of functionality

--- a/src/config/app.config
+++ b/src/config/app.config
@@ -3,3 +3,14 @@ any = 0
 
 [Runtime]
 testing = false
+user_database  = sqlite:////tmp/mett_users.db
+
+[Mett]
+default_buns = Weizen, Roggen, Roeggelchen
+default_price = 1.00
+default_grams = 66
+
+[Database]
+mongo_server = 127.0.0.1
+mongo_port = 27017
+main_database = mett_main
