added travis config and changed db path

--- a/src/config/app.config
+++ b/src/config/app.config
@@ -3,7 +3,7 @@ any = 0
 
 [Runtime]
 testing = false
-user_database  = sqlite:////tmp/mett_users.db
+user_database  = sqlite:////data/mett/users.db
 
 [Mett]
 default_buns = Weizen, Roggen, Roeggelchen
