--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_install:
   - sudo apt-get install gcc libpython3-dev
 python:
   - "3.6"
-  - "3.7"
+  - "3.7-dev"
 install:
   - pip install -r requirements.txt
 script:
