--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 before_install:
   - sudo apt-get update
-  - sudo apt-get install gcc libpython3-dev
+  - sudo apt-get install libpython3-dev
 python:
   - "3.6"
   - "3.7-dev"
