added coveralls config

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  - pytest
+  - pytest --cov coveralls --cov-report term-missing
 services:
   - mongodb
+after_success:
+  - coveralls
