--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
-dist: xenial
+dist: trusty
 language: python
 before_install:
   - sudo apt-get update
   - sudo apt-get install libpython3-dev
 python:
+  - "3.5"
   - "3.6"
   - "3.7-dev"
 install:
