--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
-dist: trusty
+dist:
+  - trusty
+  - xenial
 language: python
 before_install:
   - sudo apt-get update
@@ -6,7 +8,6 @@ before_install:
 python:
   - "3.5"
   - "3.6"
-  - "3.7-dev"
 install:
   - pip install -r requirements.txt
 script:
