--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,14 @@ matrix:
   include:
     - os: linux
       dist: trusty
+      python: 3.5
     - os: linux
       dist: xenial
+      python: 3.6
 language: python
 before_install:
   - sudo apt-get update
   - sudo apt-get install libpython3-dev
-python:
-  - "3.5"
-  - "3.6"
 install:
   - pip install -r requirements.txt
 script:
