--- a/src/config/uwsgi.config
+++ b/src/config/uwsgi.config
@@ -8,7 +8,10 @@ http-socket = 0.0.0.0:5000
 stats = 127.0.0.1:9191
 
 # plugin: python: load .wsgi file
-wsgi-file = app/app.py
+# wsgi-file = app/app.py
+
+mount = /other=app/app.py
+manage-script-name = true
 
 # set default WSGI callable name
 callable = APP
