--- a/src/config/proxy.config
+++ b/src/config/proxy.config
@@ -8,7 +8,8 @@ http-socket = 0.0.0.0:5000
 stats = 127.0.0.1:9191
 
 # plugin: python: load .wsgi file
-wsgi-file = app/app.py
+mount = /mett=app/app.py
+manage-script-name = true
 
 # set default WSGI callable name
 callable = APP
