--- a/src/config/app.config
+++ b/src/config/app.config
@@ -4,7 +4,7 @@ expiry_time = 14:30:00
 
 [Runtime]
 testing = false
-behind_proxy = false
+behind_proxy = true
 proxy_suffix = mett
 user_database  = sqlite:////data/mett/users.db
 
