auto assign default role to newly created user

--- a/src/config/app.config
+++ b/src/config/app.config
@@ -8,6 +8,9 @@ behind_proxy = true
 proxy_suffix = mett
 user_database  = sqlite:////data/mett/users.db
 
+[User]
+default_role = user
+
 [Mett]
 default_buns = Weizen, Roggen, Roeggelchen
 default_price = 1.00
