--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_install:
   - sudo apt-get install libpython3-dev
 install:
   - pip install -r requirements.txt
+  - ./dependencies.sh
 script:
   - pytest --cov 
 after_success:
