added more scheme definition and first interface functions

--- a/src/config/app.config
+++ b/src/config/app.config
@@ -6,7 +6,6 @@ expiry_time = 14:30:00
 testing = false
 behind_proxy = false
 proxy_suffix = mett
-user_database  = sqlite:////data/mett/users.db
 
 [User]
 default_role = user
@@ -17,6 +16,4 @@ default_price = 1.00
 default_grams = 66.0
 
 [Database]
-mongo_server = 127.0.0.1
-mongo_port = 27017
-main_database = mett_main
+database_path = /data/mett/mettstore.sqlite
