Added spare logic. All functions implemented, some FIXMEs

--- a/src/config/app.config
+++ b/src/config/app.config
@@ -11,9 +11,12 @@ proxy_suffix = mett
 default_role = user
 
 [Mett]
-default_buns = Weizen, Roggen, Roeggelchen
+default_buns = Weizen, Roggen
+half_buns = Roeggelchen
+default_spare = Weizen
 default_price = 1.00
 default_grams = 66.0
+spare_count = 2
 
 [Database]
 database_path = /data/mett/mettstore.sqlite
